# enterprise-rag-bench

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
benchmarks/: run_benchmarks.py
benchmarks/results/: README.md
docs/: choosing-a-pattern.md  chunking-strategy-guide.md  vector-db-comparison.md
enterprise-concerns/: access-control-rag.md  audit-trail.md  cost-optimization.md  multi-tenant-rag.md  pii-in-retrieval.md
src/: __init__.py
src/evaluation/: __init__.py  eval_runner.py  llm_judge.py  metrics.py
src/guardrails/: __init__.py  hallucination_detector.py  injection_defense.py  pii_filter.py
src/indexing/: __init__.py  chunkers.py  embedders.py  rerankers.py
src/observability/: __init__.py  cost_tracker.py  tracer.py
src/retrieval/: __init__.py  agentic_rag.py  corrective_rag.py  hybrid_search.py  naive_rag.py  parent_document.py
tests/: test_chunkers.py  test_guardrails.py  test_retrievers.py
